--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
+    <header>BASIC COUNTER</header>
         <div class="counter">  
-           
             <div class="container">
                 <div class="screen">
                     <h1 class="output">0</h1>
@@ -20,7 +20,7 @@
                 </div>
             </div>
         </div>
-    
+        <footer>© 2022 Copyright - <a href="https://emptinxss.github.io/" target="_blank">Miki Leardini</a> | All rights reserved</footer>   
         <script src="./assets/js/script.js"></script>
 </body>
 </html>
